@@ -1,2 +1,3 @@
 from .text import dump_text
 from .yaml import dump_yaml
+from .json import dump_json
