@@ -11,6 +11,8 @@ v. 0.2.0
  * add_chunk() method for LocalSrcDocument objects (sequence, table & tree)
  * new LocalSrcDocumentFile dispatcher class
  * openfile: allow file-like objects as argument
+ * fixed newlines in text output
+ * added json dump to object
  * some bugfixes
 
 v. 0.1.0
